# SFML_CURD

./: .gitignore  .gitmodules  CMakeLists.txt  CURD_Sqlite.sln  readme.md
.github/workflows/: ccpp.yml  cpp.yml
CURD_Sqlite/: Application.cpp  Application.h  CURD_Sqlite.vcxproj  CURD_Sqlite.vcxproj.filters
CURD_Sqlite/include/: Application.h
CURD_Sqlite/src/: Application.cpp  Source.cpp
include/: Application.hpp  CommonStrings.hpp  DatabaseManager.hpp  Task.hpp
scripts/: create_new_class.py  install_dep.py  perform_initial_setup.py
sqlite/: CMakeLists.txt
src/: Application.cpp  CMakeLists.txt  CommonStrings.cpp  DatabaseManager.cpp  Task.cpp  main.cpp
